# HuyShopProductService/src/main/resources/openapi.yml
@@ -8,6 +8,32 @@ tags:
     description: HUY SHOP API SERVER
 
 paths:
+  /category/all:
+    get:
+      tags:
+        - HuyShop
+      summary: ALL CATEGORY
+      operationId: getAllCategory
+      responses:
+        200:
+          description: Ok
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Category'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Category not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
+
   /category:
     post:
       tags:
@@ -67,6 +93,38 @@ paths:
             schema:
               $ref: '#/components/schemas/Category'
         required: true
+      responses:
+        200:
+          description: Ok
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Category'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Category not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
+    get:
+      tags:
+        - HuyShop
+      summary: FIND CATEGORY BY ID
+      operationId: findById
+      parameters:
+        - name: id
+          in: path
+          description: ID of category to return
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         200:
           description: Ok
